--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <p class="text-xl font-normal mt-5">Discover a world of treats, toys, and essentials handpicked for <br class="hidden lg:block"> your furry friends. Shop now and make tails wag with joy!</p>
           <button class="px-8 text-[#111111] text-xl font-normal bg-[#FFDC26] border-none btn btn-warning mt-5">Find a pet</button>
         </div>
-        <div class="absolute translate-y-80 sm:translate-y-60 md:translate-y-40 lg:translate-y-0 z-0">
+        <div class="absolute translate-y-96 sm:translate-y-60 md:translate-y-40 lg:translate-y-0 z-0">
           <img src="c1-assets/cat-big.png" alt="">
         </div>
       </div>
@@ -75,20 +75,19 @@
       <div class="ml-6 mb-10">
         <h2 class="adlam text-4xl font-normal">Browse By Categories</h2>
       </div>
-      <div class="flex flex-wrap justify-center gap-4">
-        <div class="card bg-[#F9DF8A] w-48 h-64 shadow-xl">
+      <div class="grid grid-cols-2 lg:grid-cols-6 justify-center items-center gap-4 mx-5 lg:mx-0">
+        <div class="card bg-[#F9DF8A] h-64 shadow-xl">
           <figure class="mx-12 mt-10 w-24 h-24 bg-white rounded-full">
             <img
               src="c1-assets/dog-cartoon.png"
-              alt=""
-              class="" />
+              alt=""/>
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title">Dog</h2>
             <p>3 items</p>
           </div>
         </div>
-        <div class="card bg-[#F9DF8A] w-48 h-64 shadow-xl">
+        <div class="card bg-[#F9DF8A] h-64 shadow-xl">
           <figure class="mx-12 mt-10 w-24 h-24 bg-white rounded-full">
             <img
               src="c1-assets/fish-cartoon.png"
@@ -100,7 +99,7 @@
             <p>3 items</p>
           </div>
         </div>
-        <div class="card bg-[#F9DF8A] w-48 h-64 shadow-xl">
+        <div class="card bg-[#F9DF8A] h-64 shadow-xl">
           <figure class="mx-12 mt-10 w-24 h-24 bg-white rounded-full">
             <img
               src="c1-assets/cat-cartoon.png"
@@ -112,7 +111,7 @@
             <p>3 items</p>
           </div>
         </div>
-        <div class="card bg-[#F9DF8A] w-48 h-64 shadow-xl">
+        <div class="card bg-[#F9DF8A] h-64 shadow-xl">
           <figure class="mx-12 mt-10 w-24 h-24 bg-white rounded-full">
             <img
               src="c1-assets/bird-cartoon.png"
@@ -124,7 +123,7 @@
             <p>3 items</p>
           </div>
         </div>
-        <div class="card bg-[#F9DF8A] w-48 h-64 shadow-xl">
+        <div class="card bg-[#F9DF8A] h-64 shadow-xl">
           <figure class="mx-12 mt-10 w-24 h-24 bg-white rounded-full">
             <img
               src="c1-assets/mouse-cartoon.png"
@@ -136,7 +135,7 @@
             <p>3 items</p>
           </div>
         </div>
-        <div class="card bg-[#F9DF8A] w-48 h-64 shadow-xl">
+        <div class="card bg-[#F9DF8A] h-64 shadow-xl">
           <figure class="mx-12 mt-10 w-24 h-24 bg-white rounded-full">
             <img
               src="c1-assets/rabbit-cartoon.png"
@@ -153,18 +152,178 @@
     
     <!-- start Trending Pet Products section -->
 
-    <section class="mt-28 pb-28 px-28 bg-[#FFF9F4]">
-      <div class="pt-28 pb-8">
+    <section class="lg:mt-28 mt-5 pb-28 lg:px-28 lg:bg-[#FFF9F4]">
+      <div class="pt-28 pb-8 mx-5 lg:mx-0">
         <h2 class="adlam text-4xl font-normal">Trending Pet Products</h2>
       </div>
-      <div class="relative w-[26.5rem] h-[25.125rem] bg-[#F9DF8A] rounded-xl">
-        <div class="absolute top-16">
-          <h2 class="">T- Shirt For Dogs</h2>
-        <p>Discover a world of treats, toys, and essentials handpicked for </p>
-        <button class="px-8 text-[#111111] text-xl font-normal bg-white border-none btn btn-warning mt-5">Shop Now</button> 
+
+      <div class="lg:flex justify-between mx-5 lg:mx-0">
+        <div class="relative h-[25.125rem] lg:w-96 bg-[#F9DF8A] rounded-xl">
+          <div class="absolute top-12 ml-5">
+            <h2 class="adlam text-4xl font-normal">T- Shirt For Dogs</h2>
+          <p class="text-base font-normal translate-y-4">Discover a world of treats, toys, and essentials handpicked for </p>
+          <button class="px-8 text-[#111111] text-xl font-normal bg-white border-none btn btn-warning mt-5 translate-y-4">Shop Now</button> 
+          </div>
+          <div class="absolute bottom-0 right-0">
+            <img src="c1-assets/cute-pet-small.png" alt="">
+          </div>
         </div>
-        <div class="absolute bottom-0 right-0">
-          <img src="c1-assets/cute-pet-small.png" alt="">
+
+
+        <div class="grid grid-cols-2 lg:grid-cols-3 gap-3 mt-8">
+          <div class="w-full h-full ">
+            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
+              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+                <img
+                  src="c1-assets/dog-cartoon.png"
+                  alt="" class="w-14"/>
+              </figure>
+              <div class="card-body">
+                <div class="flex gap-2 items-center">
+                  <i class="fa-solid fa-star text-yellow-500"></i>
+                <p>4.5</p>
+                </div>
+                <h2 class="card-title text-xs font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
+                <p class="text-sm lg:text-base font-medium leading-3">$39.99</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
+              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+                <img
+                  src="c1-assets/fish-cartoon.png"
+                  alt="" class="w-14"/>
+              </figure>
+              <div class="card-body">
+                <div class="flex gap-2 items-center">
+                  <i class="fa-solid fa-star text-yellow-500"></i>
+                <p>4.5</p>
+                </div>
+                <h2 class="card-title text-xs font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
+                <p class="text-sm lg:text-base font-medium leading-3">$39.99</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
+              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+                <img
+                  src="c1-assets/bird-cartoon.png"
+                  alt="" class="w-14"/>
+              </figure>
+              <div class="card-body">
+                <div class="flex gap-2 items-center">
+                  <i class="fa-solid fa-star text-yellow-500"></i>
+                <p>4.5</p>
+                </div>
+                <h2 class="card-title text-xs font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
+                <p class="text-sm lg:text-base font-medium leading-3">$39.99</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
+              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+                <img
+                  src="c1-assets/rabbit-cartoon.png"
+                  alt="" class="w-14"/>
+              </figure>
+              <div class="card-body">
+                <div class="flex gap-2 items-center">
+                  <i class="fa-solid fa-star text-yellow-500"></i>
+                <p>4.5</p>
+                </div>
+                <h2 class="card-title text-xs font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
+                <p class="text-sm lg:text-base font-medium leading-3">$39.99</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
+              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+                <img
+                  src="c1-assets/bird-cartoon.png"
+                  alt="" class="w-14"/>
+              </figure>
+              <div class="card-body">
+                <div class="flex gap-2 items-center">
+                  <i class="fa-solid fa-star text-yellow-500"></i>
+                <p>4.5</p>
+                </div>
+                <h2 class="card-title text-xs font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
+                <p class="text-sm lg:text-base font-medium leading-3">$39.99</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
+              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+                <img
+                  src="c1-assets/pet-couch.png"
+                  alt="" class="w-14"/>
+              </figure>
+              <div class="card-body">
+                <div class="flex gap-2 items-center">
+                  <i class="fa-solid fa-star text-yellow-500"></i>
+                <p>4.5</p>
+                </div>
+                <h2 class="card-title text-xs font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
+                <p class="text-sm lg:text-base font-medium leading-3">$39.99</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
+              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+                <img
+                  src="c1-assets/fish-cartoon.png"
+                  alt="" class="w-14"/>
+              </figure>
+              <div class="card-body">
+                <div class="flex gap-2 items-center">
+                  <i class="fa-solid fa-star text-yellow-500"></i>
+                <p>4.5</p>
+                </div>
+                <h2 class="card-title text-xs font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
+                <p class="text-sm lg:text-base font-medium leading-3">$39.99</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
+              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+                <img
+                  src="c1-assets/pet-couch.png"
+                  alt="" class="w-14"/>
+              </figure>
+              <div class="card-body">
+                <div class="flex gap-2 items-center">
+                  <i class="fa-solid fa-star text-yellow-500"></i>
+                <p>4.5</p>
+                </div>
+                <h2 class="card-title text-xs font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
+                <p class="text-sm lg:text-base font-medium leading-3">$39.99</p>
+              </div>
+            </div>
+          </div>
+          <div class="hidden lg:block">
+            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
+              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+                <img
+                  src="c1-assets/rabbit-cartoon.png"
+                  alt="" class="w-14"/>
+              </figure>
+              <div class="card-body">
+                <div class="flex gap-2 items-center">
+                  <i class="fa-solid fa-star text-yellow-500"></i>
+                <p>4.5</p>
+                </div>
+                <h2 class="card-title text-sm font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
+                <p class="text-base font-medium leading-3">$39.99</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
