--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <p class="text-base font-normal translate-y-4">Discover a world of treats, toys, and essentials handpicked for </p>
           <button class="px-8 text-[#111111] text-xl font-normal bg-white border-none btn btn-warning mt-5 translate-y-4">Shop Now</button> 
           </div>
-          <div class="absolute bottom-0 right-0">
+          <div class="absolute bottom-0 right-0 translate-x-6">
             <img src="c1-assets/cute-pet-small.png" alt="">
           </div>
         </div>
@@ -183,8 +183,8 @@
                   <i class="fa-solid fa-star text-yellow-500"></i>
                 <p>4.5</p>
                 </div>
-                <h2 class="card-title text-xs font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
-                <p class="text-sm lg:text-base font-medium leading-3">$39.99</p>
+                <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
+                <p class="text-base font-medium leading-3">$39.99</p>
               </div>
             </div>
           </div>
@@ -200,8 +200,8 @@
                   <i class="fa-solid fa-star text-yellow-500"></i>
                 <p>4.5</p>
                 </div>
-                <h2 class="card-title text-xs font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
-                <p class="text-sm lg:text-base font-medium leading-3">$39.99</p>
+                <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
+                <p class="text-base font-medium leading-3">$39.99</p>
               </div>
             </div>
           </div>
@@ -217,8 +217,8 @@
                   <i class="fa-solid fa-star text-yellow-500"></i>
                 <p>4.5</p>
                 </div>
-                <h2 class="card-title text-xs font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
-                <p class="text-sm lg:text-base font-medium leading-3">$39.99</p>
+                <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
+                <p class="text-base font-medium leading-3">$39.99</p>
               </div>
             </div>
           </div>
@@ -234,8 +234,8 @@
                   <i class="fa-solid fa-star text-yellow-500"></i>
                 <p>4.5</p>
                 </div>
-                <h2 class="card-title text-xs font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
-                <p class="text-sm lg:text-base font-medium leading-3">$39.99</p>
+                <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
+                <p class="text-base font-medium leading-3">$39.99</p>
               </div>
             </div>
           </div>
@@ -251,8 +251,8 @@
                   <i class="fa-solid fa-star text-yellow-500"></i>
                 <p>4.5</p>
                 </div>
-                <h2 class="card-title text-xs font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
-                <p class="text-sm lg:text-base font-medium leading-3">$39.99</p>
+                <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
+                <p class="text-base font-medium leading-3">$39.99</p>
               </div>
             </div>
           </div>
@@ -268,8 +268,8 @@
                   <i class="fa-solid fa-star text-yellow-500"></i>
                 <p>4.5</p>
                 </div>
-                <h2 class="card-title text-xs font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
-                <p class="text-sm lg:text-base font-medium leading-3">$39.99</p>
+                <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
+                <p class="text-base font-medium leading-3">$39.99</p>
               </div>
             </div>
           </div>
@@ -285,8 +285,8 @@
                   <i class="fa-solid fa-star text-yellow-500"></i>
                 <p>4.5</p>
                 </div>
-                <h2 class="card-title text-xs font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
-                <p class="text-sm lg:text-base font-medium leading-3">$39.99</p>
+                <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
+                <p class="text-base font-medium leading-3">$39.99</p>
               </div>
             </div>
           </div>
@@ -302,8 +302,8 @@
                   <i class="fa-solid fa-star text-yellow-500"></i>
                 <p>4.5</p>
                 </div>
-                <h2 class="card-title text-xs font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
-                <p class="text-sm lg:text-base font-medium leading-3">$39.99</p>
+                <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
+                <p class="text-base font-medium leading-3">$39.99</p>
               </div>
             </div>
           </div>
