added a new section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <!-- Start Browse By Categories section -->
 
     <section class="container mx-auto lg:mt-20">
-      <div class="ml-6 mb-10">
+      <div class="mb-10">
         <h2 class="adlam text-4xl font-normal">Browse By Categories</h2>
       </div>
       <div class="grid grid-cols-2 lg:grid-cols-6 justify-center items-center gap-4 mx-5 lg:mx-0">
@@ -152,177 +152,222 @@
     
     <!-- start Trending Pet Products section -->
 
-    <section class="lg:mt-28 mt-5 pb-28 lg:px-28 lg:bg-[#FFF9F4]">
-      <div class="pt-28 pb-8 mx-5 lg:mx-0">
-        <h2 class="adlam text-4xl font-normal">Trending Pet Products</h2>
-      </div>
+    <section class="lg:mt-28 mt-5 pb-28 lg:bg-[#FFF9F4]">
+<div class="container mx-auto">
+  <div class="pt-28 pb-8 mx-5 lg:mx-0">
+    <h2 class="adlam text-4xl font-normal">Trending Pet Products</h2>
+  </div>
 
-      <div class="lg:flex justify-between mx-5 lg:mx-0">
-        <div class="relative h-[25.125rem] lg:w-96 bg-[#F9DF8A] rounded-xl">
-          <div class="absolute top-12 ml-5">
-            <h2 class="adlam text-4xl font-normal">T- Shirt For Dogs</h2>
-          <p class="text-base font-normal translate-y-4">Discover a world of treats, toys, and essentials handpicked for </p>
-          <button class="px-8 text-[#111111] text-xl font-normal bg-white border-none btn btn-warning mt-5 translate-y-4">Shop Now</button> 
+  <div class="lg:flex gap-5 mx-5 lg:mx-0">
+    <div class="relative h-[25.125rem] lg:w-[26rem] bg-[#F9DF8A] rounded-xl">
+      <div class="absolute top-12 ml-5">
+        <h2 class="adlam text-4xl font-normal">T- Shirt For Dogs</h2>
+      <p class="text-base font-normal translate-y-4">Discover a world of treats, toys, and <br class="hidden lg:block"> essentials handpicked for </p>
+      <button class="px-8 text-[#111111] text-xl font-normal bg-white border-none btn btn-warning mt-5 translate-y-4">Shop Now</button> 
+      </div>
+      <div class="absolute bottom-0 right-0 translate-x-">
+        <img src="c1-assets/cute-pet-small.png" alt="">
+      </div>
+    </div>
+
+
+    <div class="grid grid-cols-2 lg:grid-cols-3 gap-3 mt-8 lg:mt-0">
+      <div>
+        <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200 pr-12">
+          <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+            <img
+              src="c1-assets/dog-cartoon.png"
+              alt="" class="w-14"/>
+          </figure>
+          <div class="card-body">
+            <div class="flex gap-2 items-center">
+              <i class="fa-solid fa-star text-yellow-500"></i>
+            <p>4.5</p>
+            </div>
+            <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
+            <p class="text-base font-medium leading-3">$39.99</p>
           </div>
-          <div class="absolute bottom-0 right-0 translate-x-6">
-            <img src="c1-assets/cute-pet-small.png" alt="">
+        </div>
+      </div>
+      <div>
+        <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200 pr-12">
+          <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+            <img
+              src="c1-assets/fish-cartoon.png"
+              alt="" class="w-14"/>
+          </figure>
+          <div class="card-body">
+            <div class="flex gap-2 items-center">
+              <i class="fa-solid fa-star text-yellow-500"></i>
+            <p>4.5</p>
+            </div>
+            <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
+            <p class="text-base font-medium leading-3">$39.99</p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200 pr-12">
+          <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+            <img
+              src="c1-assets/bird-cartoon.png"
+              alt="" class="w-14"/>
+          </figure>
+          <div class="card-body">
+            <div class="flex gap-2 items-center">
+              <i class="fa-solid fa-star text-yellow-500"></i>
+            <p>4.5</p>
+            </div>
+            <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
+            <p class="text-base font-medium leading-3">$39.99</p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200 pr-12">
+          <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+            <img
+              src="c1-assets/rabbit-cartoon.png"
+              alt="" class="w-14"/>
+          </figure>
+          <div class="card-body">
+            <div class="flex gap-2 items-center">
+              <i class="fa-solid fa-star text-yellow-500"></i>
+            <p>4.5</p>
+            </div>
+            <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
+            <p class="text-base font-medium leading-3">$39.99</p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200 pr-12">
+          <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+            <img
+              src="c1-assets/bird-cartoon.png"
+              alt="" class="w-14"/>
+          </figure>
+          <div class="card-body">
+            <div class="flex gap-2 items-center">
+              <i class="fa-solid fa-star text-yellow-500"></i>
+            <p>4.5</p>
+            </div>
+            <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
+            <p class="text-base font-medium leading-3">$39.99</p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200 pr-12">
+          <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+            <img
+              src="c1-assets/pet-couch.png"
+              alt="" class="w-14"/>
+          </figure>
+          <div class="card-body">
+            <div class="flex gap-2 items-center">
+              <i class="fa-solid fa-star text-yellow-500"></i>
+            <p>4.5</p>
+            </div>
+            <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
+            <p class="text-base font-medium leading-3">$39.99</p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200 pr-12">
+          <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+            <img
+              src="c1-assets/fish-cartoon.png"
+              alt="" class="w-14"/>
+          </figure>
+          <div class="card-body">
+            <div class="flex gap-2 items-center">
+              <i class="fa-solid fa-star text-yellow-500"></i>
+            <p>4.5</p>
+            </div>
+            <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
+            <p class="text-base font-medium leading-3">$39.99</p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200 pr-12">
+          <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+            <img
+              src="c1-assets/pet-couch.png"
+              alt="" class="w-14"/>
+          </figure>
+          <div class="card-body">
+            <div class="flex gap-2 items-center">
+              <i class="fa-solid fa-star text-yellow-500"></i>
+            <p>4.5</p>
+            </div>
+            <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
+            <p class="text-base font-medium leading-3">$39.99</p>
+          </div>
+        </div>
+      </div>
+      <div class="hidden lg:block">
+        <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200 pr-12">
+          <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
+            <img
+              src="c1-assets/rabbit-cartoon.png"
+              alt="" class="w-14"/>
+          </figure>
+          <div class="card-body">
+            <div class="flex gap-2 items-center">
+              <i class="fa-solid fa-star text-yellow-500"></i>
+            <p>4.5</p>
+            </div>
+            <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
+            <p class="text-base font-medium leading-3">$39.99</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+    </section>
+
+    <!-- start Everyday low Price section -->
+
+    <section class="container mx-auto">
+      <div class="pt-24 pb-8 mx-5 lg:mx-0">
+        <h2 class="adlam text-4xl font-normal">Everyday low Price</h2>
+      </div>
+      <div class="lg:flex items-center gap-7 mx-5">
+        <div class="hidden lg:block lg:flex items-center bg-gradient-to-r from-[#F8CCFB] to-[#ACD2FD] px-20 rounded-xl h-[25.125rem]">
+          <div class="-mt-16">
+            <h4 class="text-xl font-normal hidden lg:block">Under Price</h4>
+            <h2 class="adlam text-3xl font-normal translate-y-4 whitespace-nowrap">Pet grooming Mitt</h2>
+            <h3 class="adlam text-2xl text-white font-normal translate-y-6 hidden lg:block">(Easy Hair Removal)</h3>
+            <h2 class="adlam text-6xl font-normal translate-y-10">$7.99</h2>
+          </div>
+          <div>
+            <img src="c1-assets/cute-dog-mid.png" alt="" class="lg:h-[27rem] lg:ml-16">
           </div>
         </div>
 
 
-        <div class="grid grid-cols-2 lg:grid-cols-3 gap-3 mt-8">
-          <div class="w-full h-full ">
-            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
-              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
-                <img
-                  src="c1-assets/dog-cartoon.png"
-                  alt="" class="w-14"/>
-              </figure>
-              <div class="card-body">
-                <div class="flex gap-2 items-center">
-                  <i class="fa-solid fa-star text-yellow-500"></i>
-                <p>4.5</p>
-                </div>
-                <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
-                <p class="text-base font-medium leading-3">$39.99</p>
-              </div>
-            </div>
+        
+        <div class="lg:hidden relative h-[25.125rem] lg:w-[32rem] bg-gradient-to-r from-[#FFF9F4] to-[#F9DF8A] rounded-xl mt-6 lg:mt-0">
+          <div class="absolute top-12 ml-5">
+            <h2 class="adlam text-4xl font-normal">Pet grooming Mitt</h2>
+            <h2 class="adlam text-6xl text-[#FFDC26] font-normal translate-y-4">$7.99</h2>
           </div>
-          <div>
-            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
-              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
-                <img
-                  src="c1-assets/fish-cartoon.png"
-                  alt="" class="w-14"/>
-              </figure>
-              <div class="card-body">
-                <div class="flex gap-2 items-center">
-                  <i class="fa-solid fa-star text-yellow-500"></i>
-                <p>4.5</p>
-                </div>
-                <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
-                <p class="text-base font-medium leading-3">$39.99</p>
-              </div>
-            </div>
+          <div class="absolute bottom-0 right-0 translate-x-4">
+            <img src="c1-assets/cute-dog-mid.png" alt="" class="h-80">
           </div>
-          <div>
-            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
-              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
-                <img
-                  src="c1-assets/bird-cartoon.png"
-                  alt="" class="w-14"/>
-              </figure>
-              <div class="card-body">
-                <div class="flex gap-2 items-center">
-                  <i class="fa-solid fa-star text-yellow-500"></i>
-                <p>4.5</p>
-                </div>
-                <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
-                <p class="text-base font-medium leading-3">$39.99</p>
-              </div>
-            </div>
+        </div>
+
+        <div class="relative h-[25.125rem] lg:w-[32rem] bg-gradient-to-r from-[#FFF9F4] to-[#F9DF8A] rounded-xl mt-6 lg:mt-0">
+          <div class="absolute top-12 ml-5">
+            <h2 class="adlam text-4xl font-normal">T- Shirt For Dogs</h2>
+            <h2 class="adlam text-6xl text-[#FFDC26] font-normal translate-y-4">$7.99</h2>
           </div>
-          <div>
-            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
-              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
-                <img
-                  src="c1-assets/rabbit-cartoon.png"
-                  alt="" class="w-14"/>
-              </figure>
-              <div class="card-body">
-                <div class="flex gap-2 items-center">
-                  <i class="fa-solid fa-star text-yellow-500"></i>
-                <p>4.5</p>
-                </div>
-                <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
-                <p class="text-base font-medium leading-3">$39.99</p>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
-              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
-                <img
-                  src="c1-assets/bird-cartoon.png"
-                  alt="" class="w-14"/>
-              </figure>
-              <div class="card-body">
-                <div class="flex gap-2 items-center">
-                  <i class="fa-solid fa-star text-yellow-500"></i>
-                <p>4.5</p>
-                </div>
-                <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
-                <p class="text-base font-medium leading-3">$39.99</p>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
-              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
-                <img
-                  src="c1-assets/pet-couch.png"
-                  alt="" class="w-14"/>
-              </figure>
-              <div class="card-body">
-                <div class="flex gap-2 items-center">
-                  <i class="fa-solid fa-star text-yellow-500"></i>
-                <p>4.5</p>
-                </div>
-                <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
-                <p class="text-base font-medium leading-3">$39.99</p>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
-              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
-                <img
-                  src="c1-assets/fish-cartoon.png"
-                  alt="" class="w-14"/>
-              </figure>
-              <div class="card-body">
-                <div class="flex gap-2 items-center">
-                  <i class="fa-solid fa-star text-yellow-500"></i>
-                <p>4.5</p>
-                </div>
-                <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
-                <p class="text-base font-medium leading-3">$39.99</p>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
-              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
-                <img
-                  src="c1-assets/pet-couch.png"
-                  alt="" class="w-14"/>
-              </figure>
-              <div class="card-body">
-                <div class="flex gap-2 items-center">
-                  <i class="fa-solid fa-star text-yellow-500"></i>
-                <p>4.5</p>
-                </div>
-                <h2 class="card-title font-medium text-xl whitespace-nowrap">Pet Bed</h2>
-                <p class="text-base font-medium leading-3">$39.99</p>
-              </div>
-            </div>
-          </div>
-          <div class="hidden lg:block">
-            <div class="card card-side bg-base-100 shadow-xl items-center h-28 border-2 border-gray-200">
-              <figure class="w-20 h-20 translate-x-3 bg-[#FFF9F4] rounded-md">
-                <img
-                  src="c1-assets/rabbit-cartoon.png"
-                  alt="" class="w-14"/>
-              </figure>
-              <div class="card-body">
-                <div class="flex gap-2 items-center">
-                  <i class="fa-solid fa-star text-yellow-500"></i>
-                <p>4.5</p>
-                </div>
-                <h2 class="card-title text-sm font-bold lg:font-medium lg:text-xl">Pet Bed</h2>
-                <p class="text-base font-medium leading-3">$39.99</p>
-              </div>
-            </div>
+          <div class="absolute bottom-0 right-0 translate-x-4">
+            <img src="c1-assets/cute-pet-small.png" alt="" class="h-96">
           </div>
         </div>
       </div>
