--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
       <div class="flex gap-2 items-center bg-[#FFFFFF] py-4 lg:pl-2 lg:pr-16 xl:pr-20 rounded-xl border-2">
         <div class="relative px-9 py-9 rounded bg-[#FFF9F4] ml-2">
-          <img src="c1-assets/dog-cartoon.png" alt="" class="absolute top-0 bottom-0 left-0 right-0 m-auto w-12">
+          <img src="c1-assets/fish-cartoon.png" alt="" class="absolute top-0 bottom-0 left-0 right-0 m-auto w-12">
         </div>
         <div class="lg:pr-36">
           <div class="flex gap-2 items-center">
@@ -226,7 +226,7 @@
 
       <div class="flex gap-2 items-center bg-[#FFFFFF] py-4 lg:pl-2 lg:pr-16 xl:pr-20 rounded-xl border-2">
         <div class="relative px-9 py-9 rounded bg-[#FFF9F4] ml-2">
-          <img src="c1-assets/dog-cartoon.png" alt="" class="absolute top-0 bottom-0 left-0 right-0 m-auto w-12">
+          <img src="c1-assets/bird-cartoon.png" alt="" class="absolute top-0 bottom-0 left-0 right-0 m-auto w-12">
         </div>
         <div class="lg:pr-36">
           <div class="flex gap-2 items-center">
@@ -240,7 +240,7 @@
 
       <div class="flex gap-2 items-center bg-[#FFFFFF] py-4 lg:pl-2 lg:pr-16 xl:pr-20 rounded-xl border-2">
         <div class="relative px-9 py-9 rounded bg-[#FFF9F4] ml-2">
-          <img src="c1-assets/dog-cartoon.png" alt="" class="absolute top-0 bottom-0 left-0 right-0 m-auto w-12">
+          <img src="c1-assets/rabbit-cartoon.png" alt="" class="absolute top-0 bottom-0 left-0 right-0 m-auto w-12">
         </div>
         <div class="lg:pr-36">
           <div class="flex gap-2 items-center">
@@ -254,7 +254,7 @@
 
       <div class="flex gap-2 items-center bg-[#FFFFFF] py-4 lg:pl-2 lg:pr-16 xl:pr-20 rounded-xl border-2">
         <div class="relative px-9 py-9 rounded bg-[#FFF9F4] ml-2">
-          <img src="c1-assets/dog-cartoon.png" alt="" class="absolute top-0 bottom-0 left-0 right-0 m-auto w-12">
+          <img src="c1-assets/bird-cartoon.png" alt="" class="absolute top-0 bottom-0 left-0 right-0 m-auto w-12">
         </div>
         <div class="lg:pr-36">
           <div class="flex gap-2 items-center">
@@ -268,7 +268,7 @@
 
       <div class="flex gap-2 items-center bg-[#FFFFFF] py-4 lg:pl-2 lg:pr-16 xl:pr-20 rounded-xl border-2">
         <div class="relative px-9 py-9 rounded bg-[#FFF9F4] ml-2">
-          <img src="c1-assets/dog-cartoon.png" alt="" class="absolute top-0 bottom-0 left-0 right-0 m-auto w-12">
+          <img src="c1-assets/pet-couch.png" alt="" class="absolute top-0 bottom-0 left-0 right-0 m-auto w-12">
         </div>
         <div class="lg:pr-36">
           <div class="flex gap-2 items-center">
@@ -282,7 +282,7 @@
 
       <div class="flex gap-2 items-center bg-[#FFFFFF] py-4 lg:pl-2 lg:pr-16 xl:pr-20 rounded-xl border-2">
         <div class="relative px-9 py-9 rounded bg-[#FFF9F4] ml-2">
-          <img src="c1-assets/dog-cartoon.png" alt="" class="absolute top-0 bottom-0 left-0 right-0 m-auto w-12">
+          <img src="c1-assets/fish-cartoon.png" alt="" class="absolute top-0 bottom-0 left-0 right-0 m-auto w-12">
         </div>
         <div class="lg:pr-36">
           <div class="flex gap-2 items-center">
@@ -296,7 +296,7 @@
 
       <div class="flex gap-2 items-center bg-[#FFFFFF] py-4 lg:pl-2 lg:pr-16 xl:pr-20 rounded-xl border-2">
         <div class="relative px-9 py-9 rounded bg-[#FFF9F4] ml-2">
-          <img src="c1-assets/dog-cartoon.png" alt="" class="absolute top-0 bottom-0 left-0 right-0 m-auto w-12">
+          <img src="c1-assets/pet-couch.png" alt="" class="absolute top-0 bottom-0 left-0 right-0 m-auto w-12">
         </div>
         <div class="lg:pr-36">
           <div class="flex gap-2 items-center">
@@ -310,7 +310,7 @@
 
       <div class="md:flex hidden gap-2 items-center bg-[#FFFFFF] py-4 lg:pl-2 lg:pr-16 xl:pr-20 rounded-xl border-2">
         <div class="relative px-9 py-9 rounded bg-[#FFF9F4] ml-2">
-          <img src="c1-assets/dog-cartoon.png" alt="" class="absolute top-0 bottom-0 left-0 right-0 m-auto w-12">
+          <img src="c1-assets/rabbit-cartoon.png" alt="" class="absolute top-0 bottom-0 left-0 right-0 m-auto w-12">
         </div>
         <div class="lg:pr-36">
           <div class="flex gap-2 items-center">
