--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Browse4Pets</title>
   <link rel="stylesheet" href="style.css">
 
   <!-- google fonts -->
@@ -94,7 +94,7 @@
 
     <!-- Start Browse By Categories section -->
 
-    <section class="container mx-auto">
+    <section class="container mx-auto xl:mt-24">
       <div class="mb-10 mx-5">
         <h2 class="adlam text-4xl font-normal">Browse By Categories</h2>
       </div>
@@ -429,28 +429,7 @@
 
   <!-- start get pawsome news section -->
 
-  <!-- <div class="relative">
-    <section class="absolute lg:-translate-y-[22rem] -translate-y-[26rem] left-0 right-0 rounded-xl bg-[#FFF9F4] mt-10 top-14 mx-5 lg:mx-32">
-      <div class="lg:flex items-center py-14">
-        <div class="lg:translate-x-20 grid place-items-center">
-          <img src="c1-assets/cute-pet-mid.png" alt="">
-        </div>
-        <div class="lg:translate-x-40 text-center">
-          <h2 class="adlam text-4xl font-normal">Get Pawsome News!</h2>
-          <p class="text-xl font-regular translate-y-5">Exclusive training tips, ticks, product <br> deals and more.</p>
-          <div>
-            <input type="text" placeholder="Enter email...." class="input w-full max-w-xs translate-y-10" />
-          <div class="mt-10">
-            <button class=" px-8 text-[#111111] text-xl font-normal bg-[#FFDC26] border-none btn btn-warning mt-5">Subscribe</button>
-          </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
-    
-  
-    
     <footer class="bg-[#F9DF8A] sora w-full pb-10">
 
       <section class=" rounded-xl bg-[#FFF9F4] mt-96 top-14 mx-5 lg:mx-32 lg:-translate-y-60 -translate-y-96">
@@ -476,7 +455,7 @@
         <div class="mt-12">
           <div class="flex items-center">
             <img src="c1-assets/logo-footer.png" alt="">
-            <h2 class="text-2xl font-normal ml-4">Browse<span class="text-[#cab030]">4</span>Pets</h2>
+            <h2 class="text-2xl font-normal ml-4">Browse<span class="text-[#FFDC26]">4</span>Pets</h2>
           </div>
           <p class="mt-5 text-xl"><span class="whitespace-nowrap">Discover a world of treats, toys, and </span> <br class="lg:hidden">essentials handpicked for your furry friends</p>
         </div>
