--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
           <div class="lg:translate-x-6 xl:translate-x-20 -translate-y-10 grid place-items-center">
             <img src="c1-assets/cute-pet-mid.png" alt="">
           </div>
-          <div class="lg:translate-x-10 translate-y-10 xl:ml-24 text-center">
+          <div class="lg:translate-x-10 translate-y-10 xl:ml-24 lg:text-left text-center">
             <h2 class="adlam text-4xl font-normal whitespace-nowrap">Get Pawsome News!</h2>
             <p class="text-xl font-regular translate-y-5 whitespace-nowrap">Exclusive training tips, ticks, product <br> deals and more.</p>
             <div>
